# oh-my-experience

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  recall_feedback.yml
.github/workflows/: ci.yml  npm-publish.yml  pages-deploy.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  styles.css
docs/architecture/: applicability-flow.md  category-flow.md  data-model.md  evaluation-harness.md  hook-runtime.md  i18n.md  index.md  overview.md  retrieval-engine.md
docs/guides/: claude.md  codex.md  evaluation.md  examples.md  first-card.md  import-sources.md  index.md  introduction.md  project-libraries.md  quickstart.md  reflect-review.md  setup.md  source-scan.md
docs/internal/: cloudflare-pages.md  launch-checklist.md  npm-trusted-publishing.md  release-runbook.md
docs/public/: llms-full.txt  llms.txt
docs/reference/: card-schema.md  cli.md  config.md  eval-fixtures.md  hook-events.md  index.md  provider-adapter.md  retrieval-api.md
docs/zh/: index.md
docs/zh/architecture/: applicability-flow.md  category-flow.md  data-model.md  evaluation-harness.md  hook-runtime.md  i18n.md  index.md  (+2 more)
examples/cards/: browser-validation.md
scripts/: deploy-docs-cloudflare.mjs  prepare-release.mjs  validate-dogfood.mjs
skills/oh-my-experience/: SKILL.md
templates/: card-template.md
tests/: core.test.js
tests/e2e/: cli.test.js
(+35 files in other folders)
