[project]
name = "oh-my-experience"
version = "0.0.0"
description = "Turn AI coding sessions into a self-improving experience library."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Zhang Ren", email = "zhangren.aidev@gmail.com" }
]

[project.urls]
Homepage = "https://github.com/rennzhang/oh-my-experience"
Repository = "https://github.com/rennzhang/oh-my-experience"

